--- a/giphy/index.html
+++ b/giphy/index.html
@@ -25,16 +25,54 @@
 </head>
 
 <body>
-    <h1>Giphy Ho˜mework</h1>
+    <div class="container">
 
-    <div id="buttons">
+        <div>
+
+            <br>
+            <br>
+            <!-- Animal buttons-->
+            <div id="buttons-view"></div>
+
+            <form id="animal-form">
+                <label for="animal-input">Add an animal</label><br>
+                <input type="text" id="animal-input"><br>
+
+                <!-- submit button-->
+                <input id="add-animal" type="submit" value="Submit">
+            </form>
+            <br>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-3" id="img0"></div>
+            <div class="col-md-3" id="img1"></div>
+            <div class="col-md-3" id="img2"></div>
+
+        </div>
+
+
+        <div class="row">
+
+            <div class="col-md-3" id="img3"></div>
+            <div class="col-md-3" id="img4"></div>
+            <div class="col-md-3" id="img5"></div>
+            <div class="col-md-3" id="img6"></div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-3" id="img7"></div>
+            <div class="col-md-3" id="img8"></div>
+            <div class="col-md-3" id="img9"></div>
+
+        </div>
+
 
     </div>
-
-
-
-    <script src="giphy.js">
-    </script>
 </body>
 
 </html>
