--- a/giphy/index.html
+++ b/giphy/index.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    <script type="text/javascript" src="text/giphy.js"></script>
     <title>Document</title>
 </head>
 
